--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,7 @@ exclude:
   - sleek.jpg
 
 include: ['_pages']
-permalink: /:title/
+permalink: /CloudAuditCTFs/:title/
 
 compress_html:
   clippings: all
