--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: > # Meta description of Homepage
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/CloudAuditCTFs" # the subpath of your site, e.g. /blog
 url: "https://janczizikow.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 
 # SEO PLUGIN
@@ -16,9 +16,9 @@ social:
 
 # THEME SETTINGS
 navigation: # Navigation links
-  - {name: 'Home', link: '/CloudAuditCTFs'}
-  - {name: 'About', link: '/CloudAuditCTFs/about'}
-  - {name: 'Contact', link: '/CloudAuditCTFs/contact'}
+  - {name: 'Home', link: '/'}
+  - {name: 'About', link: '/about'}
+  - {name: 'Contact', link: '/contact'}
 
 tagline: >
   Modern Jekyll theme focused on speed performance &amp; SEO best practices
@@ -53,7 +53,7 @@ exclude:
   - sleek.jpg
 
 include: ['_pages']
-permalink: /CloudAuditCTFs/:title/
+permalink: /:title/
 
 compress_html:
   clippings: all
